[gd_scene load_steps=38 format=1]

[ext_resource path="res://Menus/Main/scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://Menus/Loading/Loading.tscn" type="PackedScene" id=2]
[ext_resource path="res://Menus/Main/sprites/title.png" type="Texture" id=3]
[ext_resource path="res://Menus/Main/scripts/Options.gd" type="Script" id=4]
[ext_resource path="res://Menus/Main/scripts/Start.gd" type="Script" id=5]
[ext_resource path="res://Menus/Main/sprites/start/start0.png" type="Texture" id=6]
[ext_resource path="res://Menus/Main/sprites/start/start1.png" type="Texture" id=7]
[ext_resource path="res://Menus/Main/sprites/start/start2.png" type="Texture" id=8]
[ext_resource path="res://Menus/Main/sprites/start/start3.png" type="Texture" id=9]
[ext_resource path="res://Menus/Main/sprites/start/start4.png" type="Texture" id=10]
[ext_resource path="res://Menus/Main/sprites/start/start5.png" type="Texture" id=11]
[ext_resource path="res://Menus/Main/sprites/start/start6.png" type="Texture" id=12]
[ext_resource path="res://Menus/Main/sprites/start/start7.png" type="Texture" id=13]
[ext_resource path="res://Menus/Main/sprites/tweak/tweak0.png" type="Texture" id=14]
[ext_resource path="res://Menus/Main/sprites/tweak/tweak1.png" type="Texture" id=15]
[ext_resource path="res://Menus/Main/sprites/tweak/tweak2.png" type="Texture" id=16]
[ext_resource path="res://Menus/Main/sprites/tweak/tweak3.png" type="Texture" id=17]
[ext_resource path="res://Menus/Main/sprites/tweak/tweak4.png" type="Texture" id=18]
[ext_resource path="res://Menus/Main/sprites/tweak/tweak5.png" type="Texture" id=19]
[ext_resource path="res://Menus/Main/sprites/tweak/tweak6.png" type="Texture" id=20]
[ext_resource path="res://Menus/Main/sprites/tweak/tweak7.png" type="Texture" id=21]
[ext_resource path="res://Menus/Main/scripts/Leave.gd" type="Script" id=22]
[ext_resource path="res://Menus/Main/sprites/leave/leave0.png" type="Texture" id=23]
[ext_resource path="res://Menus/Main/sprites/leave/leave1.png" type="Texture" id=24]
[ext_resource path="res://Menus/Main/sprites/leave/leave2.png" type="Texture" id=25]
[ext_resource path="res://Menus/Main/sprites/leave/leave3.png" type="Texture" id=26]
[ext_resource path="res://Menus/Main/sprites/leave/leave4.png" type="Texture" id=27]
[ext_resource path="res://Menus/Main/sprites/leave/leave5.png" type="Texture" id=28]
[ext_resource path="res://Menus/Main/sprites/leave/leave6.png" type="Texture" id=29]
[ext_resource path="res://Menus/Main/sprites/leave/leave7.png" type="Texture" id=30]
[ext_resource path="res://Menus/SFX/Yay.wav" type="Sample" id=31]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ) ],
"loop": false,
"name": "hover",
"speed": 15.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 6 ) ],
"loop": false,
"name": "away",
"speed": 15.0
} ]

[sub_resource type="SpriteFrames" id=3]

animations = [ {
"frames": [ ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ) ],
"loop": false,
"name": "hover",
"speed": 15.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 20 ), ExtResource( 19 ), ExtResource( 18 ), ExtResource( 17 ), ExtResource( 16 ), ExtResource( 15 ), ExtResource( 14 ) ],
"loop": false,
"name": "away",
"speed": 15.0
} ]

[sub_resource type="SpriteFrames" id=4]

animations = [ {
"frames": [ ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ) ],
"loop": false,
"name": "hover",
"speed": 15.0
}, {
"frames": [ ExtResource( 30 ), ExtResource( 29 ), ExtResource( 28 ), ExtResource( 27 ), ExtResource( 26 ), ExtResource( 25 ), ExtResource( 24 ), ExtResource( 23 ) ],
"loop": false,
"name": "away",
"speed": 15.0
} ]

[sub_resource type="Animation" id=5]

resource/name = "fade out"
length = 2.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("options:visibility/opacity")
tracks/0/interp = 2
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 2 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("title:visibility/opacity")
tracks/1/interp = 2
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 2 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[sub_resource type="SampleLibrary" id=6]

samples/Yay = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 31 )
}

[node name="Main" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Loading" type="Timer" parent="."]

process_mode = 1
wait_time = 5.0
one_shot = true
autostart = true

[node name="load" parent="Loading" instance=ExtResource( 2 )]

[node name="Main Menu" type="Node2D" parent="."]

visibility/visible = false

[node name="Background" type="ColorFrame" parent="Main Menu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 600.0
color = Color( 0, 0, 0, 1 )

[node name="title" type="AnimatedSprite" parent="Main Menu"]

transform/pos = Vector2( 512, 200 )
transform/scale = Vector2( 4, 4 )
frames = SubResource( 1 )
animation = "idle"

[node name="options" type="VButtonArray" parent="Main Menu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 437.0
margin/top = 300.0
margin/right = 587.0
margin/bottom = 420.0
flat = false
button/count = 0
button/min_button_size = -1.0
button/align = 0
script/script = ExtResource( 4 )

[node name="start" type="Button" parent="Main Menu/options"]

visibility/self_opacity = 0.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 150.0
margin/bottom = 40.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
script/script = ExtResource( 5 )

[node name="sprite" type="AnimatedSprite" parent="Main Menu/options/start"]

transform/pos = Vector2( 73, 20 )
transform/scale = Vector2( 4, 4 )
frames = SubResource( 2 )
animation = "away"
frame = 7

[node name="tweek" type="Button" parent="Main Menu/options"]

visibility/self_opacity = 0.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 40.0
margin/right = 150.0
margin/bottom = 80.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="sprite" type="AnimatedSprite" parent="Main Menu/options/tweek"]

transform/pos = Vector2( 73, 20 )
transform/scale = Vector2( 4, 4 )
frames = SubResource( 3 )
animation = "away"
frame = 7

[node name="leave" type="Button" parent="Main Menu/options"]

visibility/self_opacity = 0.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 80.0
margin/right = 150.0
margin/bottom = 120.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
script/script = ExtResource( 22 )

[node name="sprite" type="AnimatedSprite" parent="Main Menu/options/leave"]

transform/pos = Vector2( 73, 20 )
transform/scale = Vector2( 4, 4 )
frames = SubResource( 4 )
animation = "away"
frame = 7

[node name="AnimationPlayer" type="AnimationPlayer" parent="Main Menu"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
"anims/fade out" = SubResource( 5 )
playback/active = false
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Sounds" type="SamplePlayer2D" parent="Main Menu"]

params/volume_db = 0.0
params/pitch_scale = 1.0
params/attenuation/min_distance = 1.0
params/attenuation/max_distance = 2048.0
params/attenuation/distance_exp = 1.0
config/polyphony = 1
config/samples = SubResource( 6 )
config/pitch_random = 0.0

[connection signal="timeout" from="Loading" to="." method="_on_Loading_timeout"]

[connection signal="mouse_enter" from="Main Menu/options/start" to="Main Menu/options" method="_on_start_mouse_enter"]

[connection signal="mouse_exit" from="Main Menu/options/start" to="Main Menu/options" method="_on_start_mouse_exit"]

[connection signal="mouse_enter" from="Main Menu/options/tweek" to="Main Menu/options" method="_on_tweek_mouse_enter"]

[connection signal="mouse_exit" from="Main Menu/options/tweek" to="Main Menu/options" method="_on_tweek_mouse_exit"]

[connection signal="mouse_enter" from="Main Menu/options/leave" to="Main Menu/options" method="_on_leave_mouse_enter"]

[connection signal="mouse_exit" from="Main Menu/options/leave" to="Main Menu/options" method="_on_leave_mouse_exit"]

[connection signal="pressed" from="Main Menu/options/leave" to="Main Menu/options/leave" method="_pressed"]

[connection signal="finished" from="Main Menu/AnimationPlayer" to="Main Menu/options/start" method="_on_AnimationPlayer_finished"]


